# ToDo-demo

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/tests/: test_api.py
docs/: prd-todo-app.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.ts  types.ts
frontend/src/styles/: app.css
