[project]
name = "todo-backend"
version = "0.1.0"
description = "FastAPI backend for the ToDo demo app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pydantic[email]>=2.7.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5",
  "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
